# php-shoco

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  ci.nix  config.m4  default.nix  derivation.nix  flake.nix  php_shoco.c  php_shoco.h
.ci/: travis_nix.sh  travis_php.sh
.github/: php-alpine.Dockerfile  php-debian.Dockerfile  php-fedora.Dockerfile
.github/scripts/: docker.sh  linux.sh  suite.sh
.github/workflows/: ci.yml  docker.sh
nix/: ci.nix  derivation.nix
tests/: basic.phpt  invalidArg.phpt  invalidArg5.phpt  invalidArg7.phpt  phpinfo.phpt
